# hermes-toolbox

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SOUL.md  config.yaml  distribution.yaml  mise.toml  pyproject.toml
.github/: pull_request_template.md
docs/: customization-inventory.md  deterministic-workflow-primitives.md  identity-neutrality.md  install.md  public-safety-policy.md  publishing-criteria.md  recommended-hermes-workflow.md  repository-settings.md
examples/: config.public.example.yaml  profile-distribution.example.md
inventory/: plugin-runtime-probes.json  public-manifest.json  source-fingerprints.json
plugins/: README.md
primitives/: README.md
profiles/: README.md
scripts/: author_path_policy.py  author_policy.py  batch_transaction.py  candidate_policy.py  credential_policy.py  export-public-toolbox.py  export_transaction.py  install-toolbox.sh  line_safety_policy.py  manifest_checks.py  markup_policy.py  package_checks.py  package_swap.py  payload_checks.py  plugin_checks.py  plugin_probe.py  plugin_probe_policy.py  printf_policy.py  profile_checks.py  profile_export.py  profile_field_policy.py  public_manifest.py  publish-public-candidates.sh  publisher_transaction.py  real_runtime.py  safety_checks.py  sanitize_rules.py  scan-public-candidates.py  shell_glob_policy.py  shell_path_policy.py  source_safety.py  staged_safety.py  structured_text_policy.py  text_context_policy.py  text_sanitizer.py  toolbox_common.py  validate-identity-neutrality.py  validate-package-completeness.py  (+5 more)
(+550 files in other folders)
