[project]
name = "hermes-toolbox-validation"
version = "0.1.0"
description = "Validation tooling for the Hermes Toolbox distribution"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0,<7",
]

[dependency-groups]
dev = [
  "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.ruff.lint.per-file-ignores]
"skills/software-development/plan/scripts/validate_completion_report.py" = ["E701", "E702"]
